--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,10 @@
         "target": "es2018",
         "noImplicitAny": true,
         "moduleResolution": "node",
-        "sourceMap": true,
+        "declaration": true,
+        "declarationMap": true,
+        "inlineSourceMap": true,
+        "inlineSources": true,
         "outDir": "dist",
         "baseUrl": ".",
         "typeRoots": ["node_modules/@types"],
